# TimeApp

./: LICENSE  README.md  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.psd
src-tauri/src/: config.rs  handlers.rs  lib.rs  main.rs  persistent.rs
src/lib/: App.svelte  Project.svelte  ProjectPage.svelte  ProjectTimer.svelte  SettingsPage.svelte  types.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
