[package]
name = "unity_dev_timer"
version = "0.1.0"
description = "Tracks your Unity developement time"
authors = ["you"]
license = ""
repository = "https://github.com/Kesomannen/UnityDevTimer"
default-run = "unity_dev_timer"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["system-tray"] }
sysinfo = "0.29.9"
winreg = "0.51.0"
winapi = { version = "0.3.9", features = ["winuser"] }
directories = "5.0.1"
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
